[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stacklet.client.platform"
version = "0.1.6"
description = "Stacklet Platform Client"
readme = "README.md"
authors = ["Sonny Shi <sonny@stacklet.io>"]
maintainers = ["Stacklet <hello@stacklet.io>"]
license = "Apache-2.0"
include = [ "stacklet/client/platform/vendored/auth_landing_pages/ok.html", "stacklet/client/platform/vendored/auth_landing_pages/fail.html",]
[[tool.poetry.packages]]
include = "stacklet"

[tool.poetry.scripts]
stacklet-admin = "stacklet.client.platform.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.32.4"
jsonschema = "^4.9.0"
PyYAML = "^6.0"
PyJWT = "^2.4.0"
boto3 = "^1.39.16"
charset_normalizer = "^3.4.2"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
moto = { version = "^5.1.9", extras = ["cognitoidp"] }
pytest = "^8.4"
pytest-cov = "^6.2.1"
requests-mock = "^1.8.0"
pre-commit = "^2.12.0"
Nuitka = "^2.7.12"
semver = "^2.13.0"
toml = "^0.10.2"
deptry = "^0.23.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add `line-too-long` and isort to the enforced rule set.
extend-select = ["E501", "I", "F"]

[tool.deptry]
known_first_party = ["stacklet"]
per_rule_ignores = { "DEP004" = ["toml", "semver"] }
