[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacklet.client.platform"
description = "Stacklet Platform Client"
authors = [{ name = "Stacklet", email = "hello@stacklet.io" }]
requires-python = ">=3.9,<=3.14"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "Stacklet", email = "hello@stacklet.io" }]
dependencies = [
    "click>=8.0.1,<9",
    "requests>=2.32.4,<3",
    "jsonschema>=4.9.0,<5",
    "PyYAML~=6.0",
    "PyJWT>=2.4.0,<3",
    "boto3>=1.39.16,<2",
    "charset_normalizer>=3.4.2,<4",
    "jmespath>=1.0.1,<2",
]
dynamic = [ "version" ]

[project.scripts]
stacklet-admin = "stacklet.client.platform.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
    "moto[cognitoidp]>=5.1.9,<6",
    "pytest~=8.4",
    "pytest-cov>=7,<8",
    "requests-mock>=1.8.0,<2",
    "pre-commit>=4,<5",
    "Nuitka>=2.7.12,<3",
    "semver>=3,<4",
    "toml>=0.10.2,<0.11",
    "deptry>=0.23.1,<0.24",
]

[tool.hatch.version]
path = "stacklet/client/platform/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "stacklet",
    "stacklet/client/platform/vendored/auth_landing_pages/ok.html",
    "stacklet/client/platform/vendored/auth_landing_pages/fail.html",
]

[tool.hatch.build.targets.wheel]
include = [
    "stacklet",
    "stacklet/client/platform/vendored/auth_landing_pages/ok.html",
    "stacklet/client/platform/vendored/auth_landing_pages/fail.html",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add `line-too-long` and isort to the enforced rule set.
extend-select = ["E501", "I", "F"]

[tool.deptry]
known_first_party = ["stacklet"]
per_rule_ignores = { "DEP004" = ["toml", "semver"] }
